@@ -15,8 +15,8 @@ CONFIG_MEM_BANK0_START =0x20000000
 CONFIG_MEM_BANK0_LENGTH=0x10000000
 # There should be two BANKS of SDRAM on this board.  Initialization of
 # the second one fails.
-CONFIG_MEM_BANK1_START =0x30000000
-CONFIG_MEM_BANK1_LENGTH=0x10000000
+#CONFIG_MEM_BANK1_START =0x30000000
+#CONFIG_MEM_BANK1_LENGTH=0x10000000
 
 # LH28F320BFE, 32M (2Mx16)
 CONFIG_NOR_BUSWIDTH=16
