@@ -13,16 +13,26 @@ CONFIG_KERNEL_LMA=0x20008000
 
 CONFIG_MEM_BANK0_START=0x20000000
 CONFIG_MEM_BANK0_LENGTH=0x10000000
-#CONFIG_MEM_BANK1_START=0x30000000
-#CONFIG_MEM_BANK1_LENGTH=0x10000000
+CONFIG_MEM_BANK1_START=0x30000000
+CONFIG_MEM_BANK1_LENGTH=0x10000000
+
+# LH28F128BFE, 32M (2Mx16)
+CONFIG_NOR_BUSWIDTH=16
+CONFIG_NOR_BANK0_START=0x44000000
+CONFIG_NOR_BANK0_LENGTH=(8*1024*1024)
 
 CONFIG_SPINNER=y
+
+CONFIG_SMALL=y
 
 # Test code for the LCD display
 #CONFIG_CLCDC=y
 
 # Test code for the audio codec
 #CONFIG_CODEC=y
+
+# Test code for ADC
+#CONFIG_ADC=y
 
 #CONFIG_CMD_CHECKSUM=y
 CONFIG_CMD_COPY=y
@@ -36,19 +46,19 @@ CONFIG_CMD_SETENV=y
 #CONFIG_CMD_VERIFY=y
 #CONFIG_CMD_WAIT=y
 #CONFIG_CMD_XRECEIVE=y
-CONFIG_CMD_EMAC=y
+#CONFIG_CMD_EMAC=y
 
 CONFIG_ATAG=y
 CONFIG_ATAG_PHYS=0x20000100
 CONFIG_ARCH_NUMBER=609
 
-CONFIG_DRIVER_NAND=y
+#CONFIG_DRIVER_NAND=y
 CONFIG_DRIVER_NOR=y
 #CONFIG_RELOCATE_NAND=y
-CONFIG_DRIVER_CPLD_SPI=y
-CONFIG_DRIVER_EMAC=y
+#CONFIG_DRIVER_CPLD_SPI=y
+#CONFIG_DRIVER_EMAC=y
 
-CONFIG_NAND_LPD=y
+#CONFIG_NAND_LPD=y
 
 #CONFIG_ENV_AUTOBOOT=50
 
